--- a/exercises/exercise_2.html
+++ b/exercises/exercise_2.html
@@ -9,87 +9,17 @@
 
     <div data-role="page" data-position="fixed">
         <div data-role="header">
-            <h1>Exercise 2: Your Anxious Thoughts</h>
+            <h1>Exercise 2: Your Anxious Thoughts</h1>
         </div>
         <!-- /header -->
 
         <div data-role="content">
-            <p>
-                List some of the thoughts that typically show up in each of your top three feared social situations (from <b>Exercise 1</b>).
-            </p>
-
-            <form name="exercise_2" id='exercise_2'>
-                <table border="0">
-                    </label>
-                    <tr>
-                        <td>
-                            <center><b>Feared Situation</b></center>
-                        </td>
-                        <td>
-                            <center><b>Anxious Thoughts</b></center>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <input type='text' name='fear_1' id='fear_1' placeholder='1.' onchange='submitExcerise_2()'/>
-                        </td>
-                        <td>
-                            <input type='text' name='thought_1' onchange='submitExcerise_2()'/>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <input type='text' name='fear_2' placeholder='2.' onchange='submitExcerise_2()'/>
-                        </td>
-                        <td>
-                            <input type='text' name='thought_2' onchange='submitExcerise_2()'/>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <input type='text' name='fear_3' placeholder='3.' onchange='submitExcerise_2()'/>
-                        </td>
-                        <td>
-                            <input type='text' name='thought_3' onchange='submitExcerise_2()'/>
-                        </td>
-                    </tr>
-                </table>
-            </form>
+            <div id='exercise_2'></div>
             <script>
-                if (localStorage['exercise_1']) {
-                    console.log('st');
-                    var exercise_1 = JSON.parse(localStorage['exercise_1']);
-                    document.forms["exercise_2"]["fear_1"].value = exercise_1['fear_1'];
-                    document.forms["exercise_2"]["fear_2"].value = exercise_1['fear_2'];
-                    document.forms["exercise_2"]["fear_3"].value = exercise_1['fear_3'];
-                }
-                if (localStorage['exercise_2']) {
-                    var exercise_2 = JSON.parse(localStorage['exercise_2']);
-                    document.forms["exercise_2"]["thought_1"].value = exercise_2['thought_1'];
-                    document.forms["exercise_2"]["thought_2"].value = exercise_2['thought_2'];
-                    document.forms["exercise_2"]["thought_3"].value = exercise_2['thought_3'];
-                }
-                function submitExcerise_2() {
-                    var exercise_1 = {};
-                    for (var i = 1; i <= 3; i++) {
-                        if (document.forms["exercise_2"]["fear_"+i].value.length>0) {
-                            exercise_1["fear_"+i] = document.forms["exercise_2"]["fear_"+i].value;
-                        } else {
-                            exercise_1["fear_"+i] = "";
-                        }
-                    }
-                    localStorage.setItem('exercise_1', JSON.stringify(exercise_1));
-                    var exercise_2 = {};
-                    for (var i = 1; i <= 3; i++) {
-                        if (document.forms["exercise_2"]["thought_"+i].value.length>0) {
-                            exercise_2["thought_"+i] = document.forms["exercise_2"]["thought_"+i].value;
-                        } else {
-                            exercise_2["thought_"+i] = "";
-                        }
-                    }
-                    localStorage.setItem('exercise_2', JSON.stringify(exercise_2));             
-                }
+                document.getElementById('exercise_2').innerHTML = exercise_2;
+                loadExercise_2();
             </script>
+
 
         </div>
         <!-- /content -->
