--- a/exercises/exercise_5.html
+++ b/exercises/exercise_5.html
@@ -15,135 +15,10 @@
         <!-- /header -->
 
         <div data-role="content">
-            <form id='exercise_5'>
-                <table border="0">
-                    <tr>
-                        <td>
-                            <center><b>Feared Situation</b></center>
-                        </td>
-                        <td>
-                            <center><b>Anxious Thoughts</b></center>
-                        </td>
-                        <td>
-                            <center><b>Type</b></center>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <input type='text' name='fear_1' id='fear_1' placeholder='1.' onchange='submitExcerise_5()'/>
-                        </td>
-                        <td>
-                            <input type='text' name='thought_1' onchange='submitExcerise_5()'/>
-                        </td>
-                        <td>
-                            <div data-role="fieldcontain">
-                                <select id="fear_type_1" data-native-menu="false" data-mini='true' onchange='submitExcerise_5()'>
-                                    <option value="none"></option>
-                                    <option value="fortune_telling">Fortune-Telling</option>
-                                    <option value="mind_reading">Mind Reading</option>
-                                    <option value="shoulding">"Shoulding"</option>
-                                    <option value="portmortem">Postmortem</option>
-                                    <option value="spotlight_effect">The Spotlight Effect</option>
-                                    <option value="generating_stories">Generating Stories</option>
-                                </select>
-                            </div>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <input type='text' name='fear_2' placeholder='2.' onchange='submitExcerise_5()'/>
-                        </td>
-                        <td>
-                            <input type='text' name='thought_2' onchange='submitExcerise_5()'/>
-                        </td>
-                        <td>
-                            <div data-role="fieldcontain">
-                                <select id="fear_type_2" data-native-menu="false" data-mini='true' onchange='submitExcerise_5()'>
-                                    <option value="none"></option>
-                                    <option value="fortune_telling">Fortune-Telling</option>
-                                    <option value="mind_reading">Mind Reading</option>
-                                    <option value="shoulding">"Shoulding"</option>
-                                    <option value="portmortem">Postmortem</option>
-                                    <option value="spotlight_effect">The Spotlight Effect</option>
-                                    <option value="generating_stories">Generating Stories</option>
-                                </select>
-                            </div>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <input type='text' name='fear_3' placeholder='3.' onchange='submitExcerise_5()'/>
-                        </td>
-                        <td>
-                            <input type='text' name='thought_3' onchange='submitExcerise_5()'/>
-                        </td>
-                        <td>
-                            <div data-role="fieldcontain">
-                                <select id="fear_type_3" data-native-menu="false" data-mini='true' onchange='submitExcerise_5()'>
-                                    <option value="none"></option>
-                                    <option value="fortune_telling">Fortune-Telling</option>
-                                    <option value="mind_reading">Mind Reading</option>
-                                    <option value="shoulding">"Shoulding"</option>
-                                    <option value="portmortem">Postmortem</option>
-                                    <option value="spotlight_effect">The Spotlight Effect</option>
-                                    <option value="generating_stories">Generating Stories</option>
-                                </select>
-                            </div>
-                        </td>
-                    </tr>
-                </table>
-            </form>
-
-             <script>
-                if (localStorage['exercise_1']) {
-                    console.log('st');
-                    var exercise_1 = JSON.parse(localStorage['exercise_1']);
-                    document.forms["exercise_5"]["fear_1"].value = exercise_1['fear_1'];
-                    document.forms["exercise_5"]["fear_2"].value = exercise_1['fear_2'];
-                    document.forms["exercise_5"]["fear_3"].value = exercise_1['fear_3'];
-                }
-                if (localStorage['exercise_2']) {
-                    var exercise_2 = JSON.parse(localStorage['exercise_2']);
-                    document.forms["exercise_5"]["thought_1"].value = exercise_2['thought_1'];
-                    document.forms["exercise_5"]["thought_2"].value = exercise_2['thought_2'];
-                    document.forms["exercise_5"]["thought_3"].value = exercise_2['thought_3'];
-                }
-                if (localStorage['exercise_5']) {
-                    var exercise_5 = JSON.parse(localStorage['exercise_5']);
-
-                    $("#fear_type_1").val(exercise_5['fear_type_1']).attr('selected', true)
-                    $("#fear_type_2").val(exercise_5['fear_type_2']).attr('selected', true)
-                    $("#fear_type_3").val(exercise_5['fear_type_3']).attr('selected', true)
-                }
-               
-                function submitExcerise_5() {
-                    var exercise_1 = {};
-                    for (var i = 1; i <= 3; i++) {
-                        if (document.forms["exercise_5"]["fear_"+i].value.length>0) {
-                            exercise_1["fear_"+i] = document.forms["exercise_5"]["fear_"+i].value;
-                        } else {
-                            exercise_1["fear_"+i] = "";
-                        }
-                    }
-                    localStorage.setItem('exercise_1', JSON.stringify(exercise_1));
-                    var exercise_2 = {};
-                    for (var i = 1; i <= 3; i++) {
-                        if (document.forms["exercise_5"]["thought_"+i].value.length>0) {
-                            exercise_2["thought_"+i] = document.forms["exercise_5"]["thought_"+i].value;
-                        } else {
-                            exercise_2["thought_"+i] = "";
-                        }
-                    }
-                    localStorage.setItem('exercise_2', JSON.stringify(exercise_2));
-
-                    var exercise_5 = {};
-                    for (var i = 1; i <= 3; i++) {
-                        console.log($("select#fear_type_"+i).val())
-                        exercise_5['fear_type_'+i] = $("#fear_type_"+i).val();
-                    }
-                    localStorage.setItem('exercise_5', JSON.stringify(exercise_5));
-
-                }
+            <div id='exercise_5'></div>
+            <script>
+                document.getElementById('exercise_5').innerHTML = exercise_5;
+                loadExercise_5();
             </script>
 
         </div>
