--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         });
     </script>
     <script src="lib/jquery.mobile-1.3.2.min.js"></script>
+    <script src='js/exercises.js'></script>
 </head>
 
 <body>
