--- a/sections/section_1.html
+++ b/sections/section_1.html
@@ -32,50 +32,11 @@
                 <br>
                 Shy and socially anxious people are nervous in these situations because of what might happen, because of feared outcomes; specifically, they fear that they will say or do something embarrassing (such as spill a drink or forget their lines), show symptoms of anxiety (such as blushing, trembling, and sweating), or otherwise be scrutinized and judged critically by others (for example, as clumsy, incompetent, weak, and so on). The specific details of feared outcomes vary considerably from person to person; however, most social fears come down to a concern about coming up short in the eyes of others.
             </p>
-
-            <h2>Exercise 1: Top Feared Social Situations</h2>
-            <p>
-                Being as specific as possible, describe three social situations that are most fearful or problematic in your life.This could include:
-                <br> 
-                <h4><li>Social Situations</li></h4> (e.g. any kind of small talk, especially with strangers; asking for help; introducing myself to a people)
-                <br>
-                <h4><li>Being Observed by Others</li></h4> 
-                (e.g. walking into a crowded room; waiting in line; eating, drinking, or writing in front of others)
-                <br>
-                <h4><li>Performing in Front of Others</li></h4> (e.g. speaking up in a class discussion, or giving a presentation; being interviewed for a job)
-            </p>
-                <center><h3>Top 3 Feared Social Situations</h3></center>
-                <form name="exercise_1" id="exercise_1">
-                    <div data-role='fieldcontain' >
-                        <input type='text' name='fear_1' placeholder='1.' onchange='submitExcerise_1()'/>
-                        <input type='text' name='fear_2' placeholder='2.' onchange='submitExcerise_1()'/>
-                        <input type='text' name='fear_3' placeholder='3.' onchange='submitExcerise_1()'/>
-                    </div>
-                </form>
-                <script>
-                    function loadExercise_1() {
-                        if (localStorage['exercise_1']) {
-                            var exercise_1 = JSON.parse(localStorage['exercise_1']);
-                            document.forms["exercise_1"]["fear_1"].value = exercise_1['fear_1'];
-                            document.forms["exercise_1"]["fear_2"].value = exercise_1['fear_2'];
-                            document.forms["exercise_1"]["fear_3"].value = exercise_1['fear_3'];
-                        }
-                    }
-                    loadExercise_1();
-
-                    function submitExcerise_1() {
-                        var exercise_1 = {};
-                        for (var i = 1; i <= 3; i++) {
-                            if (document.forms["exercise_1"]["fear_"+i].value.length>0) {
-                                exercise_1["fear_"+i] = document.forms["exercise_1"]["fear_"+i].value;
-                            } else {
-                                exercise_1["fear_"+i] = "";
-                            }
-                        }
-                        localStorage.setItem('exercise_1', JSON.stringify(exercise_1));
-                        loadExercise_2();                      
-                    }
-                </script>
+            <div id='exercise_1'></div>
+            <script>
+                document.getElementById('exercise_1').innerHTML = exercise_1;
+                loadExercise_1();
+            </script>
                  <p>
                 Emily treated the thought <i>they think I'm weird</i> as if she literally were weird, so she decided not to approach anyone at the party. For Jack, the mere thought of speaking up in class was accompanied by palpitations, as if he were actually speaking, so he chose to say nothing. These examples demonstrate that when you take your thoughts literally (as facts) or <b><i>fuse</i></b> with them, they appear to have authority, as if they were spoken by a big monster, one so powerful that you have no choice but to act on his orders if you want to keep safe.
             </p>
@@ -89,91 +50,12 @@
                 <b><i>Defusion</i></b>: You can choose the path toward your values and take your anxious 
                 thoughts along for the ride.
             </h3>
-            <h2>Exercise 2: Your Anxious Thoughts</h2>
-            <p>
-                List some of the thoughts that typically show up in each of your top three feared social situations (from <b>Exercise 1</b>).
-            </p>
-
-            <form name="exercise_2" id='exercise_2'>
-                <table border="0">
-                    </label>
-                    <tr>
-                        <td>
-                            <center><b>Feared Situation</b></center>
-                        </td>
-                        <td>
-                            <center><b>Anxious Thoughts</b></center>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <input type='text' name='fear_1' id='fear_1' placeholder='1.' onchange='submitExcerise_2()'/>
-                        </td>
-                        <td>
-                            <input type='text' name='thought_1' onchange='submitExcerise_2()'/>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <input type='text' name='fear_2' placeholder='2.' onchange='submitExcerise_2()'/>
-                        </td>
-                        <td>
-                            <input type='text' name='thought_2' onchange='submitExcerise_2()'/>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <input type='text' name='fear_3' placeholder='3.' onchange='submitExcerise_2()'/>
-                        </td>
-                        <td>
-                            <input type='text' name='thought_3' onchange='submitExcerise_2()'/>
-                        </td>
-                    </tr>
-                </table>
-            </form>
+            <div id='exercise_2'></div>
             <script>
-                function loadExercise_2(){
-                    if (localStorage['exercise_1']) {
-                        console.log('st');
-                        var exercise_1 = JSON.parse(localStorage['exercise_1']);
-                        document.forms["exercise_2"]["fear_1"].value = exercise_1['fear_1'];
-                        document.forms["exercise_2"]["fear_2"].value = exercise_1['fear_2'];
-                        document.forms["exercise_2"]["fear_3"].value = exercise_1['fear_3'];
-                    }
-                    if (localStorage['exercise_2']) {
-                        var exercise_2 = JSON.parse(localStorage['exercise_2']);
-                        document.forms["exercise_2"]["thought_1"].value = exercise_2['thought_1'];
-                        document.forms["exercise_2"]["thought_2"].value = exercise_2['thought_2'];
-                        document.forms["exercise_2"]["thought_3"].value = exercise_2['thought_3'];
-                    }
-                }
+                document.getElementById('exercise_2').innerHTML = exercise_2;
                 loadExercise_2();
-                function submitExcerise_2() {
-                    var exercise_1 = {};
-                    for (var i = 1; i <= 3; i++) {
-                        if (document.forms["exercise_2"]["fear_"+i].value.length>0) {
-                            exercise_1["fear_"+i] = document.forms["exercise_2"]["fear_"+i].value;
-                        } else {
-                            exercise_1["fear_"+i] = "";
-                        }
-                    }
-                    localStorage.setItem('exercise_1', JSON.stringify(exercise_1));
-                    var exercise_2 = {};
-                    for (var i = 1; i <= 3; i++) {
-                        if (document.forms["exercise_2"]["thought_"+i].value.length>0) {
-                            exercise_2["thought_"+i] = document.forms["exercise_2"]["thought_"+i].value;
-                        } else {
-                            exercise_2["thought_"+i] = "";
-                        }
-                    }
-                    localStorage.setItem('exercise_2', JSON.stringify(exercise_2));
-                    loadExercise_1();             
-                }
             </script>
-
-
-
-
+           
         </div>
         <!-- /content -->
                     
