--- a/sections/section_3.html
+++ b/sections/section_3.html
@@ -129,7 +129,7 @@
             <div data-role="navbar" data-iconpos="right">
                 <ul>
                     <li>
-                        <a href="../index.html" data-rel="dialog" data-transition="pop">Back</a>
+                        <a href="section_2.html">Previous</a>
                     </li>
                     <li>
                         <a href="../index.html">Home</a>
