--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
 <body>
 
         <div data-role="page" data-position="fixed" data-theme="a">
-                <!-- /header -->
-
+                <center>
+                <img border="0" src="http://1.bp.blogspot.com/-IJY37R3pLxo/TlyE__W7rTI/AAAAAAAAAGU/YN1xraBq4MU/s1600/peaceful-morning.jpg" alt="Pulpit rock" style='opacity:0.7;float:middle;'>
+                </center>
                 <div data-role="collapsible" data-iconpos="right" data-collapsed-icon="arrow-r" data-theme="a" data-content-theme="a">
                     <h3>Content</h3>
                     <a href="sections/section_1.html"><p>Defining Shyness and Social Anxiety</p></a>
