--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 
         <div data-role="page" data-position="fixed" data-theme="a">
                 <center>
-                <img border="1" src="images/peaceful-morning.jpg" alt="Pulpit rock" style='opacity:0.7;float:middle;margin: 10px 0px;'>
+                <img border="1" src="images/peaceful-morning.jpg" alt="Pulpit rock" style='opacity:0.7;float:middle;margin: 10px 20px;'>
                 </center>
-                <div data-role="collapsible" data-iconpos="right" data-collapsed-icon="arrow-r" data-theme="a" data-content-theme="a">
+                <div style='margin: 10px 20px;' data-role="collapsible" data-iconpos="right" data-collapsed-icon="arrow-r" data-theme="a" data-content-theme="a">
                     <h3>Content</h3>
                     <a href="sections/section_1.html"><p>Defining Shyness and Social Anxiety</p></a>
                     <a href="sections/section_2.html"><p>Types of Anxious Thinking</p></a>
@@ -32,7 +32,7 @@
                     <a href="sections/section_6.html"><p>Conclusion</p></a>
                 </div>
 
-                <div data-role="collapsible" data-iconpos="right" data-collapsed-icon="arrow-r" data-theme="a" data-content-theme="a">
+                <div style='margin: 10px 20px;' data-role="collapsible" data-iconpos="right" data-collapsed-icon="arrow-r" data-theme="a" data-content-theme="a">
                     <h3>Exercises</h3>
                         <a href="exercises/exercise_1.html"><p>Exercise 1: Top Feared Social Situations</p></a>
                         <a href="exercises/exercise_2.html"><p>Exercise 2: Your Anxious Thoughts</p></a>
