--- a/sections/section_4.html
+++ b/sections/section_4.html
@@ -68,7 +68,7 @@
                 Imagine that you are standing beside a stream that has a large maple tree at the edge. It's a glorious fall day and the leaves are gradually dropping into the stream. Each leaf has one of your thoughts written on it. 
                 <br>
                 <br> 
-                Practice watching as each leaf (thought) drops into the water and floats downstream. The stream may flow slowly, quickly, or even come to a complete stop at times. Your task is to simply watch whatever happens. You can also do this exercise online at www.thinkmindfully.com/try-it. 
+                Practice watching as each leaf (thought) drops into the water and floats downstream. The stream may flow slowly, quickly, or even come to a complete stop at times. Your task is to simply watch whatever happens. You can also do this exercise online at <a href="http://www.thinkmindfully.com/try-it">www.thinkmindfully.com/try-it.</a> 
                 <br>
                 <br> 
                 <b><i>Clouds in the sky. </i></b>
