--- a/index.html
+++ b/index.html
@@ -18,11 +18,17 @@
 
 <body>
 
-        <div data-role="page" data-position="fixed" data-theme="a">
-                <center>
-                <img border="1" src="images/peaceful-morning.jpg" alt="Pulpit rock" style='opacity:0.7;float:middle;margin-top:15px;'>
-                </center>
-                <div style='margin: 10px 20px;' data-role="collapsible" data-iconpos="right" data-collapsed-icon="arrow-r" data-theme="a" data-content-theme="a">
+
+
+            <div class='test'>
+
+                        <div data-role="header">
+            <h1>Top 3 Feared Social Situations</h>
+        </div>
+
+                <br>
+                <br>
+                <div style='margin: 0px 20px;' data-role="collapsible" data-iconpos="right" data-collapsed-icon="arrow-r" data-theme="a" data-content-theme="a">
                     <h3>Content</h3>
                     <a href="sections/section_1.html"><p>Defining Shyness and Social Anxiety</p></a>
                     <a href="sections/section_2.html"><p>Types of Anxious Thinking</p></a>
@@ -54,10 +60,7 @@
                 70%</p>
                 
                 <br>
-
         </div>
-        <!-- /page -->
-
 
 </body>
 
