--- a/index.html
+++ b/index.html
@@ -58,15 +58,23 @@
                 <a href="#" onclick="clear_Storage();" data-role="button">Clear Storage</a>
                 <p> <meter value="8" min="0" max="10" style="width:10em;height:2em">75%</meter> 
                 70%</p>
-                                <br>
-                <br>                <br>
-                <br>                <br>
-                <br>
-                <br>
-                                <br>
-                <br>                <br>
-                <br>
-                <p> TESING STUFF </p>
+        <div data-role="footer" data-position="fixed">
+            <div data-role="navbar" data-iconpos="right">
+                 <ul>
+                    <li>
+                        <a href="#" data-rel="dialog" class="ui-btn-active ui-state-persist">Previous</a>
+                    </li>
+                    <li>
+                        <a href="../index.html">Home</a>
+                    </li>
+                    <li>
+                        <a href="../exercises/exercise_2.html" onclick="submitExcerise_1();">Continue</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /navbar -->
+        </div>
+        <!-- /footer -->
         </div>
 
 </body>
