--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                         localStorage.clear();
                         alert("Storage cleared");
                     }
+                    $('.test').height($(window).height());
                 </script>
                 <a href="#" onclick="clear_Storage();" data-role="button">Clear Storage</a>
                 <p> <meter value="8" min="0" max="10" style="width:10em;height:2em">75%</meter> 
@@ -63,7 +64,26 @@
                 <br>
                 <br>
                 <br>
-                
+                                <br>
+                <br>
+                <br>
+                <br>
+                                <br>
+                <br>
+                <br>
+                <br>
+                                <br>
+                <br>
+                <br>
+                <br>
+                                <br>
+                <br>
+                <br>
+                <br>
+                                <br>
+                <br>
+                <br>
+                <br>
         </div>
 
 </body>
