--- a/testing.html
+++ b/testing.html
@@ -1,26 +1,37 @@
-<!DOCTYPE html>
 <html>
-
 <head>
-    <title>Pilot Anxiety</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="stylesheet" href="lib/jquery.mobile-1.3.2.min.css" />
-    <link rel="stylesheet" href="style.css" />
-    <script src="lib/jquery-2.0.3.min.js"></script>
-    <script>
-        $(document).bind("mobileinit", function(){
-            $.mobile.defaultPageTransition = 'none';
-        });
-    </script>
-    <script src="lib/jquery.mobile-1.3.2.min.js"></script>
-    <script src='js/exercises.js'></script>
+    <title>Hellomoto</title>
+    <style text="text/javascript">
+        .hellomoto
+        {
+            background-color:#ccc;
+            position:absolute;
+            top:0px;
+            left:0px;
+            width:100%;
+            height:100%;
+            overflow:auto;
+        }
+        body
+        {
+            background-color:#ff00ff;
+            padding:0px;
+            margin:0px;
+            width:100%;
+            height:100%;
+            overflow:hidden;
+        }
+        .text
+        {
+            background-color:#cc00cc;
+            height:800px;
+            width:500px;
+        }
+    </style>
 </head>
-
 <body>
-
-            <div class='test'>
-        </div>
-
+<div class="hellomoto">
+    <div class="text">hellomoto</div>
+</div>
 </body>
-
 </html>
