--- a/index.html
+++ b/index.html
@@ -83,10 +83,19 @@
             $('.test').height($(window).height());
         </script>
         <a href="#" onclick="clear_Storage();" data-role="button">Clear Storage</a>
-        <p>
-            <meter value="8" min="0" max="10" style="width:10em;height:2em">75%</meter>
-            70%</p>
+         <div data-role="footer" data-position="fixed">
+            <div data-role="navbar" data-iconpos="right">
+                <p>
+                    <meter value="8" min="0" max="10" style="width:100%;height:2em">75%</meter>
+                    Completion: 70%
+                </p>
+            </div>
+            <!-- /navbar -->
+        </div>
+        <!-- /footer -->
+
     </div>
+
 
 </body>
 
