--- a/index.html
+++ b/index.html
@@ -80,19 +80,7 @@
                 localStorage.clear();
                 alert("Storage cleared");
             }
-            function getRealContentHeight() {
-                var header = $.mobile.activePage.find("div[data-role='header']:visible");
-                var footer = $.mobile.activePage.find("div[data-role='footer']:visible");
-                var content = $.mobile.activePage.find("div[data-role='content']:visible:visible");
-                var viewport_height = $(window).height();
-
-                var content_height = viewport_height - header.outerHeight() - footer.outerHeight();
-                if((content.outerHeight() - header.outerHeight() - footer.outerHeight()) <= viewport_height) {
-                    content_height -= (content.outerHeight() - content.height());
-                } 
-                return content_height;
-            }
-            $('.test').height(getRealContentHeight());
+            $('.test').height($(window).height());
         </script>
         <a href="#" onclick="clear_Storage();" data-role="button">Clear Storage</a>
          <div data-role="footer" data-position="fixed">
