--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
             </ul>
         </div>
 
-    <div style='position:absolute;bottom: +10%;width:100%;'>
+    <div style='position:absolute;bottom: +15%;width:100%;'>
         <a href="#popupContent" data-rel="popup" data-position-to="window" data-role="button" data-theme="a" data-content-theme="a">Content</a>
     </div>
 
-    <div style='position:absolute;bottom: 0;width:100%;background-color: black;'>
+    <div data-role="header" style='position:absolute;bottom: 0;width:100%;'>
         <div data-role="navbar" data-iconpos="right">
             <p>
                 <meter value="8" min="0" max="10" style="width:100%;height:2em">75%</meter>
