--- a/index.html
+++ b/index.html
@@ -66,14 +66,11 @@
         <a href="#popupContent" data-rel="popup" data-position-to="window" data-role="button" data-theme="a" data-content-theme="a">Content</a>
     </div>
 
-    <div data-role="header" style='position:absolute;bottom: 0;width:100%;'>
-        <div data-role="navbar" data-iconpos="right">
-            <p>
-                <meter value="8" min="0" max="10" style="width:100%;height:2em">75%</meter>
-                Completion: 70%
-            </p>
-        </div>
-        <!-- /navbar -->
+    <div data-role="header" style='position:absolute;bottom: 0;width:100%;margin:0px 0px 0px 0px;'>
+        <p>
+            <meter value="7" min="0" max="10" style="width:100%;height:1em;margin:0px 0px 0px 0px;">75%</meter>
+            Completion: 70%
+        </p>
     </div>
     <!-- /footer -->
 
