--- a/index.html
+++ b/index.html
@@ -66,13 +66,17 @@
         <a href="#popupContent" data-rel="popup" data-position-to="window" data-role="button" data-theme="a" data-content-theme="a">Content</a>
     </div>
 
-    <div data-role="header" style='position:absolute;bottom: 0;width:100%;margin:0px 0px 0px 0px;'>
-        <p>
-            <meter value="7" min="0" max="10" style="width:100%;height:1em;margin:0px 0px 0px 0px;">75%</meter>
-            Completion: 70%
-        </p>
+    <div data-role="header" style='position:absolute;bottom: 0;width:100%;'>
+        <h1>
+            <meter value="7" min="0" max="10" style="width:100%;height:2em;margin:0px 0px 0px 0px;">75%</meter>
+            </h1>
     </div>
     <!-- /footer -->
+
+    <div style='position:absolute;bottom: +.2%;left: +1.5%;width:100%;'>
+    <p style='color: black;'>Completion: 70%</p>
+
+    </div>
 
     <script>
         function clear_Storage() {
