--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
         </div>
 
     <div style='position:absolute;bottom: +15%;width:100%;'>
-        <a href="#popupContent" data-rel="popup" data-position-to="window" data-role="button" data-theme="a" data-content-theme="a">Content</a>
+        <center>
+        <a href="#popupContent" data-rel="popup" data-position-to="window" data-inline='true' data-role="button" data-theme="a" data-content-theme="a">Content</a>
+    </center>
     </div>
 
     <div data-role="header" style='position:absolute;bottom: 0;width:100%;'>
@@ -73,7 +75,7 @@
     </div>
     <!-- /footer -->
 
-    <div style='position:absolute;bottom: +.2%;left: +1.5%;width:100%;'>
+    <div style='position:absolute;bottom: +.2%;left: +2%;width:100%;'>
     <p style='color: black;'>Completion: 70%</p>
 
     </div>
